# esp32-s3-edge-ai-smart-led

./: .gitignore  .graphifyignore  README.md  build-test.bat  setup-zephyr-env.sh  setup-zephyr-wsl.sh
.github/workflows/: ci.yml
docs/: setup-wsl2-build.md  环境搭建报告.md
docs/esp32s3_edge_ai_gateway/: 01-hardware-overview.md  README.md  用户使用手册.md
docs/esp32s3_edge_ai_gateway/design-docs/: 02-system-architecture.md  03-communication-protocol.md  04-ai-inference.md  05-implementation-roadmap.md  06-meeting-room-lighting-mvp.md
docs/esp32s3_edge_ai_gateway/hardware/: v3-pinout-diagram.md
docs/esp32s3_edge_ai_gateway/plan-v1-pir-mlp/: 02-大模块任务规划-AI推理系统.md  02-大模块任务规划-WiFi数据服务.md  02-大模块任务规划-基础硬件通信.md  03-任务追踪表.md  04-最小任务单元-Phase1-02.md  04-最小任务单元-Phase1-03.md  04-最小任务单元-Phase2-01.md  04-最小任务单元-Phase2-02.md  04-最小任务单元-Phase2-04.md  04-最小任务单元-Phase3-02.md  04-最小任务单元-Phase3-03.md
docs/esp32s3_edge_ai_gateway/plan-v2-multimodal/: 01-多模态升级总体规划.md  02-大模块任务规划-声音分类模块.md  03-任务追踪表.md  04-最小任务单元-Phase1-雷达接入.md  04-最小任务单元-Phase3-场景智能.md
docs/hardware/: README.md  inmp441_driver.h  ld2410_uart.h
docs/knowledge/: README.md  edge-ai-architecture-deep-dive.md  edge-ai-brainstorming-summary.md  esp32-sr-tflm-best-practices-review.md  from-perception-to-interaction.md  mlp-model-testing-guide.md  mlp-model-training-guide.md  multimodal-ai-upgrade-roadmap.md  v4-esp-claw-ai-agent-planning.md  voice-recognition-evaluation.md
docs/review/: 2026-04-24_esp32s3_edge_ai_gateway_code_review.md  2026-04-24_esp32s3_edge_ai_gateway_code_review_v2.md
graphify-out/: GRAPH_REPORT.md  analyze_graph.py  cost.json  graph.html  graph.json
prj/: CMakeLists.txt  build_project.py  prj.conf
prj-v1/: README.md  prj.conf
prj-v1/ai/: ablation_results.txt  lighting_model_int8.tflite  normalization_params.txt  training_data.npz
prj-v1/boards/: esp32s3_devkitc_procpu.overlay
prj-v1/docs/: build_guide.md
prj-v1/include/: data_logger.h  env_dimming.h  pir.h  presence_state.h  sntp_time_sync.h  time_period.h  uart_driver.h
prj-v1/src/: main.c
prj-v2/: CMakeLists.txt  prj.conf
prj-v2/ai/: README.md  ablation_study.py  generate_data.py  lighting_model.h5  lighting_model_float.tflite  radar_generate_data.py  radar_train_model.py  training_data.csv
prj-v2/boards/: esp32s3_devkitc.overlay
prj-v2/docs/: scene_definitions.md
prj-v2/include/: ai_infer.h  model_data.h  rule_engine.h  weather_api.h
prj-v2/include/audio/: inmp441_driver.h  mfcc.h
prj-v2/include/multimodal/: multimodal_infer.h
prj-v2/include/radar/: ld2410_driver.h
prj-v2/include/scene/: scene_recognition.h
prj-v2/src/: main.c  model_data.cc  radar_model_data.cc
prj-v2/src/audio/: inmp441_driver.c  mfcc.c
prj-v2/src/drivers/: pir.c
prj-v2/src/logic/: rule_engine.c
prj-v2/src/multimodal/: multimodal_infer.c
prj-v2/src/radar/: ld2410_driver.c
prj-v2/src/scene/: scene_recognition.c
prj-v2/tests/: test_multimodal.c
prj-v2/tests/unit/: mock_pir.c  mock_sntp.c  mock_wifi.c  prj.conf  test_lighting_params.c  test_main.c  test_rule_engine.c  test_uart_frame.c
prj-v3/: .gitignore  CMakeLists.txt  Doxyfile  idf_component.yml  partitions.csv  sdkconfig.defaults
prj-v3/ai/: fusion_model.h5  fusion_model_float.tflite  fusion_model_train.py  fusion_training_data.npz  radar_analyzer.h5  radar_analyzer.tflite  radar_analyzer_train.py  radar_training_data.npz  requirements.txt  sound_classifier.h5  sound_classifier.tflite  sound_classifier_train.py  test_models.py  train_all.py  train_config.yaml
prj-v3/main/: CMakeLists.txt  idf_component.yml
prj-v3/main/include/: Lighting_Controller.h  Lighting_Event.h  aec_pipeline.h  audio_afe.h  audio_pipeline.h  audio_router.h  command_handler.h  command_words.h  dac_driver.h  env_watcher.h  i2s_driver.h  ld2410_driver.h  led_pwm.h  mfcc.h  model_loader.h  priority_arbiter.h  status_led.h  ttl_lease.h  tts_engine.h  uart_driver.h  vad_detector.h  voice_commands.h  wake_word.h  wifi_sta.h  ws2812_driver.h
prj-v3/main/src/: main.c
prj-v3/main/src/arbitration/: env_watcher.c  priority_arbiter.c  ttl_lease.c
prj-v3/main/src/audio/: audio_afe.c  audio_pipeline.c  mfcc.c
prj-v3/main/src/control/: Lighting_Controller.c
prj-v3/main/src/drivers/: dac_driver.c  i2s_driver.c  led_pwm.c  uart_driver.c  ws2812_driver.c
prj-v3/main/src/led/: status_led.c
prj-v3/main/src/multimodal/: model_loader.c  tflm_allocator.c  tflm_allocator.h
prj-v3/main/src/network/: wifi_sta.c
prj-v3/main/src/radar/: ld2410_driver.c
prj-v3/main/src/voice/: aec_pipeline.c  audio_router.c  command_handler.c  command_words.c  tts_engine.c  vad_detector.c  voice_commands.c  wake_word.c
prj-v3/main/test/: test_aec_pipeline.c  test_audio_router.c  test_command_handler.c  test_ld2410.c  test_main.c  test_mfcc.c  test_model_loader.c  test_priority_arbiter.c  test_tts_engine.c  test_vad_detector.c  test_wake_word.c
prj-v3/models/: README.md  fusion_model.tflite  radar_analyzer_float.tflite  sound_classifier_float.tflite
prj-v3/scripts/: README.md  erase_flash.sh  flash.sh  log_analyzer.py  perf_analyzer.py
prj-v3/spiffs_data/: CMakeLists.txt
prj-v3/tests_host/: CMakeLists.txt  README.md  mock_esp.h  mock_hardware.h  test_host_main.c  test_utils.h
prj/ai/: ablation_study.py  generate_data.py  requirements.txt  test_model.py  train_model.py
prj/docs/bugfix/: build_issues.md
prj/include/: ai_infer.h  fade_control.h  http_client.h  lighting.h  model_data.h  sntp_time_sync.h  sunrise_sunset.h  uart_driver.h  weather_api.h  wifi_manager.h
prj/src/: main.c
prj/src/drivers/: lighting.c  sntp_time_sync.c  uart_driver.c  wifi_manager.c
prj/src/logic/: ai_infer.c  data_logger.c  env_dimming.c  fade_control.c  presence_state.c  sunrise_sunset.c  weather_api.c
prj/tests/: README.md
prj/tests/unit/: CMakeLists.txt  mock_sntp.c  mock_wifi.c  prj.conf  test_ai_features.c  test_ai_postprocess.c  test_data_logger.c  test_env_dimming.c  test_fade_control.c  test_lighting_interface.c  test_presence_state.c  test_sunrise_sunset.c  test_time_period.c  test_uart_retry.c  test_weather_api.c
(+76 files in other folders)
