idf_component_register(
    SRCS "src/main.c"
         "src/drivers/led_pwm.c"
         "src/drivers/uart_driver.c"
         "src/drivers/i2s_driver.c"
         "src/network/wifi_sta.c"
         "src/multimodal/tflm_allocator.c"
         "src/multimodal/model_loader.c"
         "src/radar/ld2410_driver.c"
         "src/audio/mfcc.c"
         "src/audio/audio_afe.c"
         "src/audio/audio_pipeline.c"
         "src/arbitration/priority_arbiter.c"
         "src/voice/wake_word.c"
         "src/voice/command_handler.c"
         "src/voice/voice_commands.c"
         # 单元测试文件
         "test/test_main.c"
         "test/test_ld2410.c"
         "test/test_mfcc.c"
         "test/test_wake_word.c"
         "test/test_command_handler.c"
         "test/test_model_loader.c"
         "test/test_priority_arbiter.c"
    INCLUDE_DIRS "include"
                 "src/drivers"
                 "src/network"
                 "src/multimodal"
                 "src/radar"
                 "src/audio"
                 "src/arbitration"
                 "src/voice"
                 "test"
    REQUIRES unity esp_wifi esp_netif lwip nvs_flash esp_event esp_timer driver esp_driver_i2s esp_driver_uart esp_driver_ledc spiffs
)
